@startuml

class "{abstract} \n Item" {
    +name: String
    +amount: Double
    +String getName()
    +Double getAmount()
    +void setName()
    +void setAmount()
}

class Budget {
    +Budget(String name, double amount)
}

class Expense {
    +date: LocalDate
    +category: String
    +Expense(String category, String name, double amount, LocalDate date)
    +String getCategory()
    +LocalDate getDate()
}

class Deposit {
    +date: LocalDate
    +Deposit(String name, double amount, LocalDate date)
    +LocalDate getDate()
}

skinparam groupInheritance 2
"{abstract} \n Item" <|-down- Budget
"{abstract} \n Item" <|-down- Expense
"{abstract} \n Item" <|-down- Deposit
@enduml